long lon cu chi

--- a/src/main/java/fourcore/GiaoDien/application.css
+++ b/src/main/java/fourcore/GiaoDien/application.css
@@ -98,3 +98,80 @@
 .radio-button:selected .dot {
     -fx-background-color: #00BACB;          /* Màu của chấm nhỏ */
 }
+
+#txt_CapNhatChuyenTau{
+	-fx-font-size: 18px; 
+	-fx-border-color: transparent transparent #00BACB transparent; 
+	-fx-border-width: 0 0 2px 0; 
+	-fx-background-color: transparent;
+	-fx-text-fill: #00BACB;
+}
+#lbl_TieuDe {
+	-fx-text-fill: #0A1824; 
+	-fx-font-weight: bold; 
+	-fx-font-size: 30px;
+}
+#lbl_TextField {
+	-fx-font-size: 18px; 
+	-fx-text-fill: #00BACB;
+}
+#lbl_TextField_Convert {
+	-fx-font-size: 14px; 
+	-fx-text-fill: #00BACB;
+}
+#button_Blue {
+	-fx-font-size: 18px;
+	-fx-background-color: linear-gradient(to top, #00BACB, #B6D0D3);
+	-fx-text-fill: white; -fx-font-weight: bold; 
+	-fx-background-radius: 20;
+}
+#button_White {
+	-fx-font-size: 18px; 
+	-fx-font-weight: bold;
+	-fx-text-fill: linear-gradient(to top, #00BACB, #B6D0D3); 
+	-fx-border-color: linear-gradient(to top, #00BACB, #B6D0D3); 
+	-fx-border-width: 2px; -fx-border-radius: 20; 
+	-fx-background-radius: 20; 
+	-fx-background-color: transparent;
+}
+#lbl_Ghe {
+	-fx-text-fill: #FFFFF;
+	-fx-font-weight: bold;
+}
+#grid_AllGhe {
+	
+}
+#box_Money {
+	-fx-border-color: #0A1824;
+	-fx-border-width: 2px;
+	-fx-border-radius: 10px;
+}
+#lbl_Money {
+	-fx-background-color: #00BACB;
+	-fx-background-radius: 8 0 0 8;
+	-fx-border-color: #0A1824;
+	-fx-border-width: 0 2 0 0;
+	-fx-font-weight: bold;
+	-fx-font-size: 16px;
+}
+#txt_Money { 
+	-fx-background-color: transparent;
+	-fx-font-weight: bold;
+	-fx-font-size: 16px;
+}
+#grid_AllGhe {
+	-fx-border-color: #0A1824;
+	-fx-border-width: 2px;
+	-fx-border-radius: 10px;
+}
+#grid_CumGhe {
+	-fx-border-color: #0A1824;
+	-fx-border-width: 0 2 0 0;
+}
+#button_Red {
+	-fx-font-size: 18px;
+	-fx-background-color: linear-gradient(to top, #CB002C, #D498A5);
+	-fx-text-fill: white; -fx-font-weight: bold; 
+	-fx-background-radius: 20;
+}
+
